--- a/BattleTank/Config/DefaultEngine.ini
+++ b/BattleTank/Config/DefaultEngine.ini
@@ -6,6 +6,11 @@ AppliedTargetedHardwareClass=Desktop
 DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
 
+[/Script/EngineSettings.GameMapsSettings]
+EditorStartupMap=/Game/Maps/BattleGround.BattleGround
+GameDefaultMap=/Game/Maps/BattleGround.BattleGround
+GlobalDefaultGameMode=/Game/Modes/BattleTankGameModeBP.BattleTankGameModeBP_C
+
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
 DefaultTerminalVelocity=4000.000000
@@ -44,8 +49,3 @@ MaxSubsteps=6
 SyncSceneSmoothingFactor=0.000000
 AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
-
-[/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/BattleGround.BattleGround
-GameDefaultMap=/Game/BattleGround.BattleGround
-
