--- a/BattleTank/Config/DefaultEngine.ini
+++ b/BattleTank/Config/DefaultEngine.ini
@@ -7,8 +7,8 @@ DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Maps/BattleGround.BattleGround
-GameDefaultMap=/Game/Maps/BattleGround.BattleGround
+EditorStartupMap=/Game/Levels/BattleGround.BattleGround
+GameDefaultMap=/Game/Levels/MainMenu.MainMenu
 GlobalDefaultGameMode=/Game/Modes/BattleTankGameModeBP.BattleTankGameModeBP_C
 
 [/Script/Engine.PhysicsSettings]
@@ -49,5 +49,3 @@ MaxSubsteps=6
 SyncSceneSmoothingFactor=0.000000
 AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
-
-
